--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "devDependencies": {},
   "scripts": {
     "test": "cd test-it && ./run-tests.sh",
-    "make-n64": "cd make-it && node make n64"
+    "make-v64": "cd make-it && node make v64"
   },
   "repository": {
     "type": "git",
