npm, make: More fixes for windows build (now requires VS 2013 or later)
Tested with community editions.

--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,4 @@ Eclipse-workspace/Task-04-SysTick
 Eclipse-workspace/Task-05-Serial
 Eclipse-workspace/Task-07VTest
 Eclipse-workspace/Task-VBlink
+node_modules
