Require:  Basic "require(package)" support and tests.

--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,7 @@ Eclipse-workspace/Task-05-Serial
 Eclipse-workspace/Task-07VTest
 Eclipse-workspace/Task-VBlink
 node_modules
+poly2
+poly3
+birdwatcher
+source/antlr/gen-js
