Ceanup: Removed some extra files from trevor pull. emscripten build options.
version bumped. The working rule is that versions that end in a "+" are
smaller steps past the last released build. When a new release build is made
the number should bump as well andante "+" removed. This includes released
prerelease builds.

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "vireo",
-  "version": "2.0.0-alpha.9",
+  "version": "2.0.0-alpha.10",
   "homepage": "https://github.com/NI/VireoSDK",
   "authors": [
     "SEE AUTHORS"
@@ -22,11 +22,11 @@
     "Documents",
     "Eclipse-workspace",
     "Vireo_Xcode",
+    "Vireo_VS2013",
     "make-it",
     "source",
     "test-it",
     "package.json",
-    "README.md",
-    "AUTHORS"
+    "README.md"
   ]
 }
