--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "devDependencies": {},
   "scripts": {
     "test": "cd test-it && ./run-tests.sh",
-    "make": "cd make-it && node make"
+    "make": "cd make-it && node make",
+    "serve-dox": "cd documents/gh-pages && http-server -p 6502"
   },
   "repository": {
     "type": "git",
