TrsavisCI: Added colors to package.JSON.  This is where you see how valuable CI is. Its worth it.

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "2.0.0-alpha.9",
   "description": "SDK for experimental vireo runtime engine.",
   "dependencies": {
+    "colors": "^1.1.2",
     "diff": "^1.4.0",
     "http-server": "^0.8.0",
     "shelljs": "^0.5.1"
