Add support for building AAL from same folder as normal viro make (make-it). AAL build rules moved to EmMakefile-AAL, invoked by EmMakefile if found. The AnalysisWrapper.cpp file should be in VireoSDK/private, and is not tracked (.gitignore).  If not found, the Makefile skips the analysis build and links normally. Analysis can be built with different optimization flags than the main Virteo build by setting EM_ANALYSIS_OPT_FLAG in EmMakefile.

--- a/Vireo_Xcode/VireoEggShell.xcodeproj/xcshareddata/xcschemes/EggShell.xcscheme
+++ b/Vireo_Xcode/VireoEggShell.xcodeproj/xcshareddata/xcschemes/EggShell.xcscheme
@@ -68,6 +68,10 @@
             isEnabled = "NO">
          </CommandLineArgument>
          <CommandLineArgument
+            argument = "A.via"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
             argument = "Viaduino.via"
             isEnabled = "NO">
          </CommandLineArgument>
