--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,12 @@
 language: cpp
 compiler:
     - gcc
+before_script:
+    - git clone https://github.com/urho3d/emscripten-sdk.git
+    - cd emscripten-sdk
+    - ls
+    - source ./emsdk_env.sh
+    - emcc -v
 script:
     - npm install
     - make
