--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
+sudo: false
 language: cpp
-compiler:
-    - gcc
+compiler: gcc
 before_script:
     - git clone --depth 1 https://github.com/urho3d/emscripten-sdk.git && emscripten-sdk/emsdk activate --build=Release sdk-master-64bit && source emscripten-sdk/emsdk_env.sh
+    - cat ~/.emscripten
     - emcc -v
 script:
     - npm install
