--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,15 @@
 sudo: false
 language: cpp
 compiler: gcc
+addons:
+    apt:
+        sources:
+            - ubuntu-toolchain-r-test
+        packages:
+            - g++-4.9
 before_script:
+    - if [ "$CXX" = "g++" ]; then export CXX="g++-4.8" CC="gcc-4.8"; fi
+    - g++ --version
     - git clone --depth 1 https://github.com/urho3d/emscripten-sdk.git && emscripten-sdk/emsdk activate --build=Release sdk-master-64bit && source emscripten-sdk/emsdk_env.sh
     - cat ~/.emscripten
     - emcc -v
