--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,8 @@ before_script:
     - git clone --depth 1 https://github.com/urho3d/emscripten-sdk.git && emscripten-sdk/emsdk activate --build=Release sdk-master-64bit && source emscripten-sdk/emsdk_env.sh
     - cat ~/.emscripten
     - emcc -v
+    - gcc -v
+    - node -v
 script:
     - npm install
     - make && make test
